--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Vite App</title>
   </head>
   <body class="bg-[#E94E77] h-screen flex items-center justify-center">
-    <div class="h-1/2 w-1/2 bg-[#b3bcbb] rounded-2xl border-3 shadow-2xl flex flex-col justify-between overflow-hidden">
+    <div class="h-4/5 w-1/2 bg-[#b3bcbb] rounded-2xl border-3 shadow-2xl flex flex-col justify-between overflow-hidden md:w-3/4 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
       <!--Partie du dessus-->
-      <div class="h-1/2 flex justify-center items-center">
-        <div class=" flex justify-between flex-col items-center bg-white w-4/5 h-10/12 rounded-2xl border-2 gap-">
+      <div class="h-4/5 flex justify-center items-center"> <!--75% ,-->
+        <div class=" flex justify-between flex-col items-center bg-white w-4/5 h-10/12 rounded-2xl border-2 overflow-hidden">
           <h1 class="mt-5 font-bold text-3xl ">Session</h1>
           <h2 class="font-bold text-6xl -scroll-mt-12"><span>25</span> : <span>00</span></h2>
           <div class="flex justify-center items-center mb-3 gap-3">
@@ -21,14 +21,30 @@
       </div>
 
       <!--Partie du dessous-->
-      <div class="bg-red-500 h-1/2 flex justify-center items-center gap-7">
+      <div class=" h-full flex justify-center items-center gap-7">
           <!-- Bloc de commande : pause-->
 
-          <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl ml-2.5 flex flex-col items-center justify-around border-black border-1">
+          <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl ml-2.5 flex flex-col items-center justify-around border-black border-1 ">
 
             <!-- Bouton du haut-->
-            <div class="bg-[#b3bcbb]  h-1/2 w-10/12 flex justify-center items-center ">
-              <p>- 5 +</p>  
+            <div class="bg-[#b3bcbb]  h-1/2 w-10/12 flex justify-between items-center ">
+              <!-- Bouton : Signe moins-->
+              <div class=" bg-gray-400 rounded-full w-10 h-10 flex justify-center items-center  ml-2 hover:bg-gray-500 hover:scale-105 transition-all duration-300 ease-in md:ml-0.5">
+                <button>
+                  -
+                </button>
+              </div>
+
+              <!-- Texte : Compteur-->
+               <p>5</p>
+
+               <!-- Bouton : Signe plus-->
+              <div class=" bg-gray-400 rounded-full w-10 h-10 flex justify-center items-center mr-2 hover:bg-gray-500 hover:scale-105 transition-all duration-300 ease-in md:mr-0.5">
+                <button>
+                  +
+                </button>
+              </div>
+
             </div>
             
               <h2 class="text-white tracking-[0.25em] ">Break Length</h2>
@@ -36,25 +52,25 @@
           </div>
 
           <!-- Bloc de commande : duree de session-->
-           <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl mr-2.5 flex flex-col items-center justify-around border-black border-1">
+           <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl mr-2.5 flex flex-col items-center justify-around border-black border-1 ">
 
             <!-- Bouton du haut-->
             <div class="bg-[#b3bcbb]  h-1/2 w-10/12 flex justify-between items-center ">
               <!-- Bouton : Signe moins-->
-              <div class="&">
-                <a href="#">
-                  <p>-</p>
-                </a>
+              <div class=" bg-gray-400 rounded-full w-10 h-10 flex justify-center items-center  ml-2 hover:bg-gray-500 hover:scale-105 transition-all duration-300 ease-in">
+                <button>
+                  -
+                </button>
               </div>
 
               <!-- Texte : Compteur-->
                <p>15</p>
 
                <!-- Bouton : Signe plus-->
-              <div>
-                <a href="#">
-                  <p>+</p>
-                </a>
+              <div class=" bg-gray-400 rounded-full w-10 h-10 flex justify-center items-center mr-2 hover:bg-gray-500 hover:scale-105 transition-all duration-300 ease-in">
+                <button>
+                  +
+                </button>
               </div>
 
             </div>
