--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-[#E94E77] h-screen flex items-center justify-center">
-    <div class="h-4/5 w-1/2 bg-[#b3bcbb] rounded-2xl border-3 shadow-2xl flex flex-col justify-between overflow-hidden md:w-3/4 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
+  <body class="bg-[#E94E77] min-h-screen flex items-center justify-center">
+
+    <div class="w-11/12 sm:w-4/5 md:w-3/4 lg:w-1/2 xl:w-1/3 2xl:w-1/4 h-auto bg-[#b3bcbb] rounded-2xl border-3 shadow-2xl flex flex-col justify-between overflow-auto">
       <!--Partie du dessus-->
       <div class="h-4/5 flex justify-center items-center"> <!--75% ,-->
-        <div class=" flex justify-between flex-col items-center bg-white w-4/5 h-10/12 rounded-2xl border-2 overflow-hidden">
+        <div class="flex justify-between flex-col items-center bg-white w-4/5 h-10/12 rounded-2xl border-2 overflow-hidden p-4 gap-4">
           <h1 class="mt-5 font-bold text-3xl ">Session</h1>
-          <h2 class="font-bold text-6xl -scroll-mt-12"><span>25</span> : <span>00</span></h2>
-          <div class="flex justify-center items-center mb-3 gap-3">
+          <h2 class="font-bold text-4xl sm:text-5xl md:text-6xl -scroll-mt-12"><span>25</span> : <span>00</span></h2>
+          <div class="flex justify-center items-center mb-3 gap-3 flex-wrap">
             <a href="#" class="border-1 pl-3 pr-3 pt-2 pb-2 rounded-2xl hover:bg-[#b3bcbb] hover:scale-105 transition-all duration-300 ease-in">Start</a>
             <a href="#" class="border-1 pl-3 pr-3 pt-2 pb-2 rounded-2xl hover:bg-[#b3bcbb] hover:scale-105 transition-all duration-300 ease-in">Reset</a>
           </div>
@@ -21,10 +22,12 @@
       </div>
 
       <!--Partie du dessous-->
-      <div class=" h-full flex justify-center items-center gap-7">
+      <div class="h-full flex justify-center items-center gap-7 my-4">
+
           <!-- Bloc de commande : pause-->
 
-          <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl ml-2.5 flex flex-col items-center justify-around border-black border-1 ">
+          <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl ml-2.5 flex flex-col items-center justify-around border-black border-1 gap-y-2 p-2">
+
 
             <!-- Bouton du haut-->
             <div class="bg-[#b3bcbb]  h-1/2 w-10/12 flex justify-between items-center ">
@@ -52,7 +55,8 @@
           </div>
 
           <!-- Bloc de commande : duree de session-->
-           <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl mr-2.5 flex flex-col items-center justify-around border-black border-1 ">
+           <div class="w-1/2 bg-[#323232] h-1/2 rounded-3xl mr-2.5 flex flex-col items-center justify-around border-black border-1 gap-y-2 p-2 ">
+
 
             <!-- Bouton du haut-->
             <div class="bg-[#b3bcbb]  h-1/2 w-10/12 flex justify-between items-center ">
@@ -75,7 +79,8 @@
 
             </div>
             
-              <h2 class="text-white tracking-[0.25em] ">Break Length</h2>
+        <h2 class="text-white tracking-[0.25em] pt-2">Break Length</h2>
+
             
           </div>
 
